# PRISM

./: .gitignore  README.md  pyproject.toml
script/: bench.sh  run_bench.sh  serve_vllm.sh  sweep_methods_parallel.sh
src/: __init__.py  answer_verification.py  data_sources.py  main.py  prompts.py  settings.py  shared.py
src/methods/: __init__.py  zero_shot.py
src/methods/composable/: __init__.py  stages.py  stepwise.py
src/methods/composable/create_population/: __init__.py  sample_n.py
src/methods/composable/pop_to_answer/: __init__.py  llm_aggregate.py  majority_vote.py  prm_score_vote.py
src/methods/composable/pop_to_pop/: __init__.py  agentic_debate.py  mad_conformist_follower.py  prism.py  recursive_aggregate.py  refine.py
tests/: test_answer_verification.py  test_composable_cache.py
