[project]
name = "PRISM"
version = "0.1.0"
description = "Deep thinking framework for LLMs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "huggingface-hub>=1.4.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.5",
    "numpy>=2.2.6",
    "pydantic>=2.11.7",
    "pydantic-ai>=1.17.0",
    "pydantic-settings>=2.10.1",
    "sympy>=1.14.0",
    "antlr4-python3-runtime>=4.13.2",
    "tqdm>=4.66.0",
    "vllm>=0.11.0",
    "tabulate>=0.9.0",
    "seaborn>=0.13.2",
]
authors = [{ name = "Rituraj Sharma", email = "rituraj@vt.edu" }]

[dependency-groups]
dev = ["pyright>=1.1.407", "ruff>=0.12.11", "uv>=0.9.3"]
